--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rollup-react-library",
   "version": "0.1.0",
   "description": "This is a sample react library build with rollup",
-  "main": "dist/index.js",
+  "main": "dist/esm/index.js",
   "scripts": {
     "build": "rollup -c"
   },
@@ -14,6 +14,7 @@
     "@babel/preset-react": "^7.14.5",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
     "postcss": "^8.3.6",
     "rollup": "^2.54.0",
     "rollup-plugin-delete": "^2.0.0",
